--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
     <string name="app_name">PopMovies</string>
+    <string name="action_sort_by">Sort by</string>
+    <string name="action_sort_by_popular">Most Popular</string>
+    <string name="action_sort_by_top_rated">Highest Rated</string>
+    <string name="title_activity_detail">Movie Details</string>
+    <string name="title_activity_detail_fragment">DetailActivityFragment</string>
     <string name="action_settings">Settings</string>
+    <string name="rating">Rating</string>
+    <string name="release_date">Released</string>
+    <string name="details">Details</string>
+    <string name="trailers">Trailers</string>
+    <string name="reviews">Reviews</string>
 </resources>
