--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="details">Details</string>
     <string name="trailers">Trailers</string>
     <string name="reviews">Reviews</string>
+    <string name="error_message">An error has occurred.</string>
 </resources>
