--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
     <string name="app_name">PopMovies</string>
-    <string name="action_sort_by">Sort by</string>
+    <string name="action_options">Options</string>
     <string name="action_sort_by_popular">Most Popular</string>
     <string name="action_sort_by_top_rated">Highest Rated</string>
+    <string name="action_favorites">Favorites</string>
     <string name="title_activity_detail">Movie Details</string>
     <string name="action_settings">Settings</string>
     <string name="error_message">An error has occurred.</string>
+    <string name="mark_favorite">Mark as Favorite</string>
 </resources>
