--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="action_settings">Settings</string>
     <string name="error_message">An error has occurred.</string>
     <string name="mark_favorite">Mark as Favorite</string>
+    <string name="reviews">Reviews</string>
 </resources>
