--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="action_settings">Settings</string>
     <string name="error_message">An error has occurred.</string>
     <string name="mark_favorite">Mark as Favorite</string>
+    <string name="un_mark_favorite">Remove from Favorites</string>
     <string name="reviews">Reviews</string>
 </resources>
