--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="mark_favorite">Mark as Favorite</string>
     <string name="un_mark_favorite">Remove from Favorites</string>
     <string name="reviews">Reviews</string>
+    <string name="trailers">Trailers</string>
 </resources>
